# chip8

./: README.md
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/web/: wasm.js  wasm_bg.wasm
