[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8_core = { path = "../chip8_core" }
js-sys = "^0.3.70"
wasm-bindgen = "^0.2.93"

[dependencies.web-sys]
version = "^0.3.46"
features = [
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
]

[lib]
crate-type = ["cdylib"]
